--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "university-management-auth-service",
+  "name": "assignment-3",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.ts",
